--- a/views/index.ejs
+++ b/views/index.ejs
@@ -133,7 +133,7 @@
                                     value="<%- price.id%>">Create Subscriptions</button> -->
                                 <a href="/create-subscriptions" class="btn btn-primary btn-lg m-2"
                                     value="<%- price.id%>">Create
-                                    Subscriptions</a>
+                                    Memberships</a>
                             </div>
                         </div>
                     </div>
