--- a/views/reports/index.ejs
+++ b/views/reports/index.ejs
@@ -55,10 +55,10 @@
                                                 </div>
                                                 <div>
                                                     <a href="<%= financialReports%>" target="_blank"
-                                                        class="btn btn-primary btn-icon-text" type="button">Financial
+                                                        class="btn btn-primary btn-icon-text m-1" type="button">Financial
                                                         Reports <i
                                                             class="fa-solid fa-arrow-up-right-from-square btn-icon-append"></i></a>
-                                                    <a href="/create-report" class="btn btn-primary btn-icon-text"
+                                                    <a href="/create-report" class="btn btn-primary btn-icon-text m-1"
                                                         type="button">
                                                         <i class="fas fa-plus btn-icon-prepend btn-icon-prepend"></i>
                                                         Add Report</a>
