--- a/views/auth/createSubs.ejs
+++ b/views/auth/createSubs.ejs
@@ -56,7 +56,7 @@
                                             <%- include('../cars/formFields.ejs', {allMakes, car: null}); %>
                                             <div class="col-lg-12">
                                                 <div class="form-group">
-                                                    <label for="product" class="required">Product</label>
+                                                    <label for="product" class="required">Membership</label>
 
                                                     <select id="product" name="product" required autofocus
                                                         class="form-control mb-3 form-control-lg js-example-basic-single w-100">
