--- a/views/cars/view.ejs
+++ b/views/cars/view.ejs
@@ -39,26 +39,27 @@
             <!-- partial -->
             <div class="main-panel">
                 <div class="content-wrapper">
-                    <h4>
-                        View Car
-                    </h4>
                     <% if(car) { %>
                     <div class="row text-left">
                         <div class="col-lg-12 d-flex flex-column">
                             <div class="row flex-grow">
-                                <div class="col-6 grid-margin stretch-card">
+                                <div class="col-12 grid-margin stretch-card">
                                     <div class="card card-rounded">
                                         <div class="card-body">
-                                            <div class="table-responsive mt-1">
-                                                <% if(canEditCar) { %>
-                                                <div
-                                                    class="d-sm-flex justify-content-between align-items-start float-end">
-                                                    <a href="/edit-car/<%- car.id%>?url=/car" type="button"
-                                                        class="btn btn-primary btn-icon-text">
-                                                        <i class=" mdi mdi-square-edit-outline"></i> Edit
-                                                    </a>
+                                            <div class="d-sm-flex justify-content-between align-items-start">
+
+                                                <div>
+                                                    <h4 class="card-title card-title-dash">Car Information</h4>
                                                 </div>
+                                                <% if(canEditCar) { %>
+                                                <a href="/edit-car/<%- car.id%>?url=/car" type="button"
+                                                    class="btn btn-primary btn-icon-text">
+                                                    <i class=" mdi mdi-square-edit-outline"></i> Edit
+                                                </a>
                                                 <% } %>
+
+                                            </div>
+                                            <div class="table-responsive mt-1">
                                                 <table class="table table-hover">
                                                     <thead>
                                                         <tr>
