--- a/views/partials/subscriptions/information.ejs
+++ b/views/partials/subscriptions/information.ejs
@@ -4,16 +4,17 @@
             <%= templateTitle%>
         </h4>
     </div>
-    <div class="d-sm-flex justify-content-between align-items-start float-end">
-        <% if(showCreateBtn) { %>
-        <a href="/create-subscriptions" class="btn btn-primary btn-icon-text text-white me-2" type="button">
-            <i class="fas fa-plus btn-icon-prepend"></i>Create Memberships</a>
-        <% } %>
+    <div class="d-sm-flex justify-content-between align-items-start">
         <% if(showManageBtn) { %>
-        <a id="manage-billing-button" class="btn btn-primary btn-icon-text manage-billing-button" style="margin: 0;"
-            type="submit" value="<%- customer.billingID%>" email="<%- customer.email%>">
+        <a id="manage-billing-button" class="btn btn-primary btn-icon-text text-white manage-billing-button m-1"
+            style="margin: 0;" type="submit" value="<%- customer.billingID%>" email="<%- customer.email%>">
             <i class="fab fa-stripe-s"></i> Manage Billing</a>
         <% } %>
+        <% if(showCreateBtn) { %>
+        <a href="/create-subscriptions" class="btn btn-primary btn-icon-text text-white m-1" type="button">
+            <i class="fas fa-plus btn-icon-prepend"></i>Create Memberships</a>
+        <% } %>
+
     </div>
 
 </div>
