--- a/views/user/view.ejs
+++ b/views/user/view.ejs
@@ -41,7 +41,7 @@
                     <div class="row text-left">
                         <div class="col-lg-12 d-flex flex-column">
                             <div class="row flex-grow">
-                                <div class="col-sm-12 col-md-6 grid-margin stretch-card">
+                                <div class="col-sm-12 col-md-12 grid-margin stretch-card">
                                     <div class="card card-rounded">
                                         <div class="card-body">
                                             <div class="d-sm-flex justify-content-between align-items-start">
@@ -54,13 +54,13 @@
                                                         <% } %></h4>
                                                 </div>
                                                 <div
-                                                    class="d-sm-flex justify-content-between align-items-start float-end">
+                                                    class="d-sm-flex justify-content-between align-items-start">
                                                     <a href="/changePassword/<%- customer.id%>?url=/customers"
-                                                        type="button" class="btn btn-primary btn-icon-text me-2">
+                                                        type="button" class="btn btn-primary btn-icon-text m-1">
                                                         <i class="fa-solid fa-key"></i> Change Password
                                                     </a>
                                                     <a href="/edit-user/<%- customer.id%>?url=/customers" data-id="user"
-                                                        type="button" class="btn btn-primary btn-icon-text">
+                                                        type="button" class="btn btn-primary btn-icon-text m-1">
                                                         <i class="fa-solid fa-user-pen"></i> Edit Personal Info
                                                     </a>
                                                 </div>
@@ -127,7 +127,7 @@
                                     </div>
                                 </div>
                                 <% if(cars) { %>
-                                <div class="col-sm-12 col-md-6 grid-margin stretch-card">
+                                <div class="col-sm-12 col-md-12 grid-margin stretch-card">
                                     <div class="card card-rounded">
                                         <div class="card-body">
                                             <div class="d-sm-flex justify-content-between align-items-start">
