Change wording Subscriptions to Memberships.

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -130,7 +130,7 @@
                             <div class="card-footer text-center"
                                 style="background-color:transparent !important; border-top: none">
                                 <!-- <button class="btn btn-primary btn-lg select-product-btn m-2"
-                                    value="<%- price.id%>">Create Subscriptions</button> -->
+                                    value="<%# price.id%>">Create Subscriptions</button> -->
                                 <a href="/create-subscriptions" class="btn btn-primary btn-lg m-2"
                                     value="<%- price.id%>">Create
                                     Memberships</a>
